# SIC-UK-Codes

./: SIC_UK_Classification_Workflow_Analysis.md  UK_SIC_5Layer_Q&A_Analysis.md  UK_SIC_Classification_Technical_Framework.md  UK_SIC_Industry_Classification_Report_v2.md  WORTH_AI_CONSENSUS_ENGINE_REPORT.md  WORTH_INDUSTRY_CLASSIFICATION_DEEP_INVESTIGATION.md  WORTH_INDUSTRY_CLASSIFICATION_REPORT.md  Worth_AI_Consensus_Engine_Blueprint.md  index.html
warehouse-service/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
warehouse-service/.github/workflows/: cherry-pick.yml  clean-up.yml  cleanup-release-branch.yaml  create-release-branch.yaml  create-tag.yml  dev-build-push-deploy.yaml  hotfix-report.yaml  ld-find-flags.yaml  pr-title-format.yml  pre-commit-hooks.yaml  prod-build-push-deploy.yaml  qa-build-push-deploy.yaml  run-tests-docker.yaml  staging-build-push-deploy.yaml
warehouse-service/alembic/: env.py  script.py.mako
warehouse-service/alembic/versions/: 2112ba97e702_load_zipcode_tables.py  2f249adbc919_add_foriegn_key_constraint.py  352759500d50_add_names_and_addresses_to_table.py  43749fde6870_create_match_request_table.py  4955b41c908f_simplify_matchresult_table.py  6095f57bf3f7_add_business_id.py  739d763f8e82_create_zipcode_tables.py  744b384d8712_load_zipcode_tables_us.py  85f96ff7c7e6_auto_timestamps.py  878eeeec1fe7_npi_incremental_runs.py  a51fef955468_extras_column_in_match_request.py  a61dae294323_remove_payload_from_request.py  c1e305ab28bc_match_result_table.py  c74e188566ea_add_export_request_table.py  d170c286c9ef_populate_matchrequest_default_values.py  ea764b097681_add_fact_table.py
warehouse-service/datapooler/: __init__.py  __main__.py  config.py  constants.py
warehouse-service/tests/: conftest.py  conftest_sqlite.py
(+2617 files in other folders)
